<resources>
    <string name="placeholder_table_name">Table 1</string>
    <string name="placeholder_login_username">Peter Karl</string>
    <string name="placeholder_login_userrole">Waiter</string>
    <string name="placeholder_badge_count">99+</string>
    <string name="placeholder_country_name">United States</string>
    <string name="placeholder_country_code">(+1)</string>
    <string name="placeholder_phone">(650) 422 9701</string>
    <string name="placeholder_title">Page Title</string>
    <string name="placeholder_average_time_spent_here">0 min</string>
    <string name="placeholder_item_name">Pepperoni</string>
    <string name="placeholder_item_components">Garlic powder, olive oil, ground black pepper, salt, aspargus and bacon slices</string>
    <string name="placeholder_tags">tag1, tag2, tag3</string>
    <string name="placeholder_average_ticket">$0.00</string>
    <string name="placeholder_total_spent_here">$0</string>
    <string name="placeholder_customer_since">Jul-11</string>
    <string name="placeholder_paid_credit_card">Paid Credit Card *** 4057 $:</string>
    <string name="placeholder_paid_credit_card_value">-35.31</string>
    <string name="placeholder_transaction_id">Trx ID xxxxxxxxxxx</string>
    <string name="placeholder_order_subtotal">97.00</string>
    <string name="placeholder_order_tax">8.31</string>
    <string name="placeholder_order_total">105.31</string>
    <string name="placeholder_cash_paid">110.00</string>
    <string name="placeholder_zero_value">0.00</string>
    <string name="placeholder_change">4.69</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt</string>
    <string name="placeholder_round_button_text">Pizza\n(5)</string>
    <string name="placeholder_food_unavailable_message">Unavailable Until 11 December, 2015</string>
    <string name="placeholder_modifier_item_title">Select a size</string>
    <string name="placeholder_modifier_item_radio_text">Small</string>
    <string name="placeholder_modifier_item_description1">Select maximum of 1</string>
    <string name="placeholder_modifier_item_description2">1 for Free, 1 extra for $1.3 extra for $1.5</string>
    <string name="placeholder_modifier_item_quantity_name">Wasab</string>
    <string name="placeholder_modifier_item_price">(+$0.00)</string>
    <string name="placeholder_timed_fire_time">00:05 min</string>
    <string name="placeholder_today">Today</string>
    <string name="placeholder_profile_lastname">Karl</string>
    <string name="placeholder_build_version">Version: 1.0 - Build: 10 - Version Code: 1</string>
    <string name="fragment_title_ordering_table">Table %1$d - $%2$.2f</string>
    <string name="fragment_title_ordering_table_without_price">Table %1$s</string>
    <string name="fragment_title_ordering_seat">Seat #%d</string>
    <string name="fragment_title_layout">Layout</string>
    <string name="title_rockandui_app_name">RockAndUI</string>
    <string name="title_connect_customer">Connect Customer</string>
    <string name="title_clockinout">Clock In / Out</string>
    <string name="title_configuration_finished">Configuration Finished</string>
    <string name="title_open_tabs">Open Tabs</string>
    <string name="format_number_n">#%d</string>
    <string name="format_price">$%.2f</string>
    <string name="format_price_string">$%s</string>
    <string name="format_price_only">%.2f</string>
    <string name="format_price_no_decimal">$%d</string>
    <string name="format_payer_n">Payer #%d</string>
    <string name="format_num_seats_n"># Seats %s</string>
    <string name="format_seat_n">Seat #%d</string>
    <string name="format_modifier_item_value">(%1$s$%2$.2f)</string>
    <string name="format_time_holder">%1$2dh:%2$2dm</string>
    <string name="format_price_no_dollar_sign">%.2f</string>
    <string name="format_table_n">Table #%s</string>
    <string name="format_order_items_count_format">%sx</string>
    <string name="format_country_prefix_format">(%1$s)</string>
    <string name="format_phone_number_format">%1$s %2$s</string>
    <string name="format_payment_table">Payment Table #%s</string>
    <string name="format_cash_payment_table">Cash Payment Table #%s</string>
    <string name="format_credit_card_table">Credit Card - Table #%s</string>
    <string name="format_paid_credit_card_info">Paid Credit Card *** %s $:</string>
    <string name="format_build_version">Version: %1$s - Build: %2$s - Version Code: %3$d</string>
    <string name="format_about">RockSpoon\n\nVersion: %1$s - Build: %2$s - Version Code: %3$d</string>
    <string name="format_tag">#%1$s</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="cash_sign">$</string>
    <string name="cash_10">$10</string>
    <string name="cash_20">$20</string>
    <string name="cash_30">$30</string>
    <string name="cash_50">$50</string>
    <string name="cash_70">$70</string>
    <string name="cash_100">$100</string>
    <string name="cash_120">$120</string>
    <string name="cash_150">$150</string>
    <string name="fifteen_percents">15%</string>
    <string name="twenty_percents">20%</string>
    <string name="plus">+</string>
    <string name="button_my_area">My Area</string>
    <string name="button_bar">Bar</string>
    <string name="button_indoor">Indoor</string>
    <string name="button_takeout">Takeout</string>
    <string name="button_delivery">Delivery</string>
    <string name="button_tips_consolidation">Tips Consolidation</string>
    <string name="button_logout">Logout</string>
    <string name="button_request_discount">Request Discount</string>
    <string name="button_print_receipt">Print Receipt</string>
    <string name="button_send_receipt_by_sms">Send Receipt by SMS</string>
    <string name="button_send_receipt_by_email">Send Receipt by Email</string>
    <string name="button_no_receipt">No Receipt</string>
    <string name="button_cancel_transaction">Cancel Transaction</string>
    <string name="button_single_payment">Single Payment</string>
    <string name="button_equal_custom">Equal / Custom</string>
    <string name="button_pay_per_seat">Pay Per Seat</string>
    <string name="button_food_category">%1$s (%2$d)</string>
    <string name="button_close">Close</string>
    <string name="button_x">X</string>
    <string name="button_merge_bills">Merge Bills</string>
    <string name="button_pay">Pay</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reopen_bill">Re-open Bill</string>
    <string name="button_close_table">Close Table</string>
    <string name="button_pay_bill">Pay Bill</string>
    <string name="button_dine_in">Dine-in</string>
    <string name="button_done">Done</string>
    <string name="button_back">Back</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_share">Share</string>
    <string name="button_split">Split</string>
    <string name="button_add_to_order_and_create_duplicate"><![CDATA[Add to Order & Create Duplicate]]></string>
    <string name="button_add_to_order_and_continue"><![CDATA[Add to Order & Continue]]></string>
    <string name="button_add_to_order">Add to Order</string>
    <string name="button_gift_item">Gift Item</string>
    <string name="button_delete">Delete</string>
    <string name="button_add_new_network">Add New Network</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_connect">Connect</string>
    <string name="button_all_seats">All Seats</string>
    <string name="button_ok">OK</string>
    <string name="button_login">Login</string>
    <string name="button_item_availability">Item Availability</string>
    <string name="button_clockinout_break">Clock-out / Take a Break</string>
    <string name="button_my_schedules">My Schedules</string>
    <string name="button_item_photos">Item Photos</string>
    <string name="button_goto_main_menu">Go to main menu</string>
    <string name="button_with_photos">With photos</string>
    <string name="button_without_photos">Without photos</string>
    <string name="button_split_item">Split</string>
    <string name="button_one_person_pays">1 Person pays the whole bill</string>
    <string name="button_split_bill_equally">Split the bill equally</string>
    <string name="button_split_by_each_person">Split by what each person ordered</string>
    <string name="button_custom_bill_split">Custom bill split</string>
    <string name="button_undo_split">Undo split</string>
    <string name="button_send_me_app_link">Yes, send me the app link</string>
    <string name="button_no_thanks">No, thank you</string>
    <string name="button_no_tip">No Tip</string>
    <string name="button_custom_with_dollar_sign">$ Custom</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_clear_signature">Clear Signature</string>
    <string name="button_inbox">Inbox</string>
    <string name="button_in_progress">In Progress</string>
    <string name="button_continue">Continue</string>
    <string name="button_undo">Undo</string>
    <string name="button_start">Start</string>
    <string name="message_initialsetup_loggedin">Logged in as %s.\nFetching venue list.</string>
    <string name="message_initialsetup_onevenuefound">Only one venue found: %s</string>
    <string name="message_select_device_venue">Select the venue that this device belongs.</string>
    <string name="message_select_device_association">Select the device to associate with.</string>
    <string name="message_connecting_as_device">Trying to connect as device.</string>
    <string name="message_logged_in_as_device">Logged in as device %s</string>
    <string name="message_select_device_confirm">Do you want to assign this device to %s?</string>
    <string name="message_select_device_confirm_registered">The device %s is already registered.\nAre you sure you want to assign to this device?</string>
    <string name="message_loading_pleasewait">Loading application&#8230;</string>
    <string name="message_fetching_employees">Fetching Employee List&#8230;</string>
    <string name="message_fetching_device_data">Fetching Device Data&#8230;</string>
    <string name="message_fetching_floor_plan">Fetching Floor Plan&#8230;</string>
    <string name="message_fetching_menus">Fetching menu list &#8230;</string>
    <string name="message_initialsetup_login">Let\'s configure your device. To do so, login with a manager account.</string>
    <string name="password">Password</string>
    <string name="showpassword">Show Password</string>
    <string name="order_total">Order Total $:</string>
    <string name="custom">Custom</string>
    <string name="cash_paid">Cash Paid $:</string>
    <string name="your_change_is">Your change is $:</string>
    <string name="paid">Paid</string>
    <string name="ssid">SSID</string>
    <string name="add_new_network">Add New Network</string>
    <string name="network_name">Network Name (SSID)</string>
    <string name="network_name_hint">Your wireless network SSID</string>
    <string name="security_type">Security Type</string>
    <string name="hint_password">Your wireless password</string>
    <string name="connect_to_network">Connect to Network</string>
    <string name="wpa2">WPA2</string>
    <string name="please_choose_inbox_or_in_progress_orders">Please choose whether the screen\nwill show Inbox or In Progress Orders</string>
    <string name="if_you_select_inbox_make_sure_you_configure">If you select Inbox make sure you configure\nyour second tablet to have In Progress mode</string>
</resources>