<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_topbar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dialog_topbar_margin_bottom"
        android:background="@color/gray">

        <TextView
            android:id="@+id/textView7"
            style="@style/rsTextEnourmous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/connect_to_network" />

        <Button
            android:id="@+id/dialog_connect_wifi_closebtn"
            style="@style/rsFlatButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="0dp"
            android:text="@string/button_x"
            android:textColor="@color/textcolor_lightblue"
            android:textSize="@dimen/textsize_enourmous" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView13"
        style="@style/rsTextBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_name"
        android:labelFor="@id/dialog_add_wifi_networkname"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ssid"
        android:id="@+id/dialog_connect_wifi_ssid"
        android:layout_gravity="center_horizontal"
        style="@style/rsTextBig" />

    <TextView
        style="@style/rsTextBig"
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_type"
        android:labelFor="@id/dialog_add_wifi_securitytype"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wpa2"
        android:id="@+id/dialog_connect_wifi_securitytype"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/rsTextBig"
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:labelFor="@id/dialog_add_wifi_networkname"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_connect_wifi_password"
        android:hint="@string/hint_password"
        android:layout_margin="5dp"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showpassword"
        android:id="@+id/dialog_connect_wifi_showpassword"
        style="@style/rsTextBig"
        android:nestedScrollingEnabled="false" />

    <View
        android:id="@+id/connect_customer_dialog_separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/bordercolor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_connect_wifi_cancelbtn"
            style="@style/rsPlainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/textcolor_black" />

        <Button
            android:id="@+id/dialog_connect_wifi_connectbtn"
            style="@style/rsPlainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/button_connect"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>