<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/payment_paybill_payeritem_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/format_payer_n"
        android:textSize="@dimen/textsize_big" />

    <TextView
        android:id="@+id/payment_paybill_payeritem_cashsign"
        style="@style/rsTextBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_sign" />

    <EditText
        android:id="@+id/payment_paybill_payeritem_value"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/placeholder_cash_paid"
        android:textSize="@dimen/textsize_big" />

    <Button
        android:id="@+id/payment_paybill_payeritem_paybtn"
        style="@style/rsPlainButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_pay"
        android:visibility="visible" />

    <TextView
        android:id="@+id/payment_paybill_payeritem_paidtext"
        style="@style/rsTextBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        android:textColor="@color/textcolor_greenprice"
        android:visibility="gone" />

</LinearLayout>